--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author:
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
-description: "Read TLDR and summarize" 
+description: "Read papers and summarize" 
 
 # Build settings
 
@@ -66,6 +66,6 @@ minima:
   #  - { platform: x,              user_url: "https://x.com/jekyllrb" }
   #  - { platform: youtube,        user_url: "https://www.youtube.com/jekyll" }
 
-  baseurl: /tech-news
+  baseurl: /read-papers
 
 
